Increasing height of slideshow to prevent image cropping

--- a/css/styles.css
+++ b/css/styles.css
@@ -301,7 +301,7 @@ main {
 
 .project-slideshow {
   position: relative;
-  height: 180px;
+  height: 260px;
   margin-top: 1rem;
   border-radius: 14px;
   overflow: hidden;
